Fix photo issue of pics cutting off in mobile version

--- a/less/main.less
+++ b/less/main.less
@@ -148,8 +148,10 @@ section {
 .offwhite {
   background-color: @color-offwhite;
   article {
+		padding: 0 2%;
     figure {
       img {
+				width: 90%;
         border: 15px solid @color-red;
 				max-width: 600px;
 				display: block;
@@ -319,9 +321,10 @@ footer {
 	}
 	figure {
 		img {
+			width: 70%;
 			max-width: 400px;
 			display: block;
-			margin: auto;
+			margin:auto;
 		}
 	}
 }
@@ -419,18 +422,16 @@ footer {
 	justify-content: center;
 	align-items: center;
 	article {
+		width: 50%;
 		figure {
 			img {
+				flex-basis: 50%;
 				max-width: 550px;
 				margin: 10px;
-				#gigipic {
-					height: 100%;
-					min-height: 500px;
 				}
 			}
 		}
 	}
-}
 
 .blue {
 	display: flex;
